- [Feature] Store X.509 certificates in Keychain
- [Feature] Custom icon with progressbar in the Finder when downloading files
- [Feature] Browser outline view
- [Feature] Browser column view
- [Feature] Toolbar button to switch view
- [Feature] History of recently connected hosts
- [Feature] Set character encoding per bookmark
- [Feature] Set connect mode per bookmark (FTP)
- [Feature] Show folders in working directory (and autocomplete) in 'Go to Folder' dialog
- [Feature] Exclude duplicate files from transfer upon alert
- [Feature] Apply button in file info dialog
- [Feature] Duplicate files on server
- [Feature] Preferences window with toolbar
- [Feature] Option to turn off disconnect prompt in Preferences
- [Feature] Option to keep connection alive in Preferences
- [Feature] UTF-8 is now used as default encoding
- [Feature] Edit with non-default editor using the browser context menu

2.4.5
- [Bugfix] No permissions set on transferred files when connection is closed unexpectedly (SFTP)

2.4.4
- [Localize] Danish Localization
- [Localize] Polish Localization
- [Feature] Added CSSEdit to the list of supported editors (http://macrabbit.com/cssedit/)
- [Feature] Added CotEditor to the list of supported editors (http://www.aynimac.com/)
- [Feature] Gray out files in browser view when disconnected
- [Bugfix] Unexpected null reply received (FTP)

2.4.3
- [Localize] Hungarian Localization
- [Bugfix] Modification date changed when uploading files from the external editor
- [Bugfix] Browser window could lock up when reconnecting and login was needed 
- [Feature] Disconnect item in menubar
- [Bugfix] Bug fixes

2.4
- [Localize] Swedish Localization
- [Feature] Additional encryption ciphers supported (SFTP)
- [Feature] Action dropdown menu in toolbar
- [Feature] Added Jedit X to the list of supported editors (http://www.artman21.net/product/JeditX/)
- [Feature] Added mi to the list of supported editors (http://mimikaki.net/)