@@ -13,7 +13,7 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 - [Feature] Toolbar button to switch view
 - [Feature] History of recently connected hosts
 - [Feature] Set character encoding per bookmark
-- [Feature] Set connect mode per bookmark (FTP)
+- [Feature] Set connect mode (active/passive) per bookmark (FTP)
 - [Feature] Show folders in working directory (and autocomplete) in 'Go to Folder' dialog
 - [Feature] Exclude duplicate files from transfer upon alert
 - [Feature] Apply button in file info dialog
@@ -21,7 +21,11 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 - [Feature] Preferences window with toolbar
 - [Feature] Option to turn off disconnect prompt in Preferences
 - [Feature] Option to keep connection alive in Preferences
-- [Feature] UTF-8 is now used as default encoding
+- [Feature] Choose character encoding in connection dialog
+- [Feature] Choose connect mode in connection dialog (FTP)
+- [Feature[ Drop down list of folders in Goto dialog
+- [Feature] Sorting files by permission
+- [Feature] UTF-8 is now used as the default character encoding
 - [Feature] Edit with non-default editor using the browser context menu
 
 2.4.5
